tests/urmoac/input/wkt/errors/polygons_broken_geometry/destinations.wkt
#id;pos;[var]
2000;POLYGON((-210 -10, -190 -0 10, -210 10, -210 -10))
